--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,11 +1,12 @@
-parameters:
-    pbe_base.menu_controller.class: PBE\BaseBundle\Controller\MenuController
-
 services:
     pbe_base.menu.top_menu_from_folder:
-        class: %pbe_base.menu_controller.class%
+        class: PBE\BaseBundle\Controller\MenuController
         tags:
             - { name: pbe_base.top_menu_from_folder, alias: pbe_base_top_menu }
+    pbe_base.multi_site.canonical_link:
+        class: PBE\BaseBundle\Controller\MultiSiteController
+        tags:
+            - { name: pbe_base.canonical_link, alias: canonical_link }
     pbe_base.twig.base_extension:
         class: PBE\BaseBundle\Twig\BaseExtension
         arguments:
